Added include_addresses flag to the external GET /profiles
