# packages/commonwealth/server/routes/profiles/getProfiles.ts
@@ -1,15 +1,12 @@
-import Sequelize from 'sequelize';
-import type {
-  GetProfilesReq,
-  GetProfilesResp,
-} from 'common-common/src/api/extApiTypes';
+import type { GetProfilesReq, GetProfilesResp, } from 'common-common/src/api/extApiTypes';
 import { needParamErrMsg } from 'common-common/src/api/extApiTypes';
 import { oneOf, query, validationResult } from 'express-validator';
-import type { TypedRequestQuery, TypedResponse } from '../../types';
-import { success, failure } from '../../types';
+import Sequelize from 'sequelize';
 import type { DB } from '../../models';
-import { formatPagination } from '../../util/queries';
+import type { TypedRequestQuery, TypedResponse } from '../../types';
+import { failure, success } from '../../types';
 import { paginationValidation } from '../../util/helperValidations';
+import { formatPagination } from '../../util/queries';
 
 const { Op } = Sequelize;
 
@@ -21,6 +18,7 @@ export const getProfilesValidation = [
     ],
     `${needParamErrMsg} (addresses, profile_ids)`
   ),
+  query('include_addresses').optional().isBoolean().toBoolean(),
   query('count_only').optional().isBoolean().toBoolean(),
   ...paginationValidation,
 ];
@@ -35,19 +33,25 @@ const getProfiles = async (
     return failure(res.status(400), errors);
   }
   // This route is for fetching all profiles + addresses by community
-  const { addresses, profile_ids, count_only } = req.query;
+  const { addresses, include_addresses, profile_ids, count_only } = req.query;
 
   const pagination = formatPagination(req.query);
 
   const where = {};
   if (profile_ids) where['id'] = { [Op.in]: profile_ids };
   const include = [];
-  if (addresses)
+  if (addresses && !include_addresses) {
     include.push({
       model: models.Address,
       where: { address: { [Op.in]: addresses } },
       required: true,
     });
+  } else if(include_addresses) {
+    include.push({
+      model: models.Address,
+      required: true,
+    });
+  }
 
   let profiles, count;
   if (!count_only) {
