# packages/commonwealth/server/swagger/swagger_external.json
@@ -294,6 +294,13 @@
           },
           {
             "in": "query",
+            "name": "include_addresses",
+            "type": "boolean",
+            "required": false,
+            "description": "Returns the associated addresses with the queried profile"
+          },
+          {
+            "in": "query",
             "name": "count_only",
             "type": "boolean",
             "description": "Return only the number of entities found."
